<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">盯盘</string>
    <string name="setup_title">打开盯盘</string>
    <string name="setup_hint">后端可以在手机 Termux 里跑，也可以在电脑上跑。\n\n本机：Termux 执行 bash scripts/termux-run.sh 后点下面按钮。\n电脑：电脑执行 ./scripts/run-web.sh --lan，把打印的地址填进去。</string>
    <string name="setup_url_hint">http://192.168.x.x:8000 或 http://127.0.0.1:8000</string>
    <string name="setup_open">打开盯盘</string>
    <string name="setup_local">本机 Termux（127.0.0.1:8000）</string>
    <string name="menu_change_server">更换服务器</string>
</resources>
